name:                hazard
version:             0.0.1
synopsis:            simple and easy static web site generator
description:         <TODO>
homepage:            https://github.com/xfire/hazard
bug-reports:         https://github.com/xfire/hazard/issues
license:             OtherLicense
license-file:        LICENSE
author:              Rico Schiekel
maintainer:          hazard@downgra.de
category:            Web
build-type:          Simple
stability:           experimental
cabal-version:       >=1.2
tested-with:         GHC >=7.0.3

data-files:          LICENSE

library
  hs-source-dirs:    src
  build-depends:     base,
                     filepath,
                     directory
  exposed-modules:   Hazard,
                     Hazard.Core
  -- Other-modules:       

source-repository head
  type:              git
  location:          git@github.com:xfire/hazard.git
